prevent small screen overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -343,6 +343,7 @@ a.social-twitter:before {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  overflow-x: hidden;
 }
 
 .location p {
